ecommerce/k8s/manifests/004_keycloak-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-postgres-deployment
  namespace: ecommerce
  labels:
    app: keycloak-postgres
    service: keycloak-postgres
    version: 26.0.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-postgres
      version: "17.0"
  template:
    metadata:
      labels:
        app: keycloak-postgres
        version: "17.0"
    spec:
      containers:
        - name: postgres
          image: postgres:17.0
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          startupProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 30
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 30
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 30
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: keycloak-postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres-service
  namespace: ecommerce
  labels:
    app: keycloak-postgres
    service: keycloak-postgres
    version: 26.0.1
spec:
  ports:
    - port: 5432
      name: tcp
  selector:
    app: keycloak-postgres
