ecommerce/k8s/manifests/007_api-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ecommerce-gateway
  namespace: ecommerce
  labels:
    app: ecommerce-gateway
    version: 1.0.0
spec:
  gatewayClassName: istio
  listeners:
    - name: http-listener
      port: 4000
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
