ecommerce/k8s/manifests/003_order-microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-deployment
  namespace: ecommerce
  labels:
    app: order
    version: 0.0.1-SNAPSHOT
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
        version: 0.0.1-SNAPSHOT
    spec:
      containers:
        - name: order
          image: orders:0.0.1-SNAPSHOT
          imagePullPolicy: Never # Use local image and not pull from registry
          ports:
            - containerPort: 5002

---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: ecommerce
  labels:
    app: order
    service: order
    version: 0.0.1-SNAPSHOT
spec:
  selector:
    app: order
    version: 0.0.1-SNAPSHOT
  ports:
    - port: 5002
      name: tcp
      targetPort: 5002

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: order-service-http-routes
  namespace: ecommerce
spec:
  parentRefs:
    - name: ecommerce-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/orders/  # Matches paths that start with /api/v1/orders
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /v1/orders # Remove the '/api' prefix
      backendRefs:
        - name: order-service
          port: 5002
